# byte

./: .coveragerc.travis  .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  tox.ini
byte/: __init__.py  base.py  collection.py  database.py  document.py  expressions.py  model.py  property.py  table.py
byte/compilers/: base.py  operation.py
byte/compilers/core/: base.py  models.py
byte/compilers/json/: __init__.py  insert.py  select.py
byte/core/: compat.py  enums.py  model.py  property.py
byte/core/helpers/: object.py  resolve.py  uri.py  validate.py
byte/core/models/: __init__.py  property.py  writer.py
byte/core/plugin/: base.py  manager.py
byte/engines/: __init__.py  database.py  document.py  table.py
byte/engines/core/: __init__.py  base.py
byte/executors/: base.py  file.py  memory.py
byte/executors/core/: base.py
byte/executors/file/: __init__.py  main.py  revision.py
byte/executors/memory/: __init__.py  main.py  revision.py  tasks.py
byte/formats/json/: __init__.py  decoder.py  encoder.py  main.py  tasks.py
byte/queries/: insert.py  select.py  update.py
byte/queries/core/: base.py
byte/queries/where/: query.py
byte/statements/: __init__.py  delete.py  insert.py  select.py  write.py
byte/statements/core/: base.py  result.py
src/byte/: collection.py  property.py
src/byte/formats/: json.py
tests/: __init__.py
tests/collection/: __init__.py  basic_tests.py  relation_tests.py
tests/compilers/: json_tests.py
tests/model/: dynamic_tests.py  relation_tests.py  static_tests.py
tests/plugin/: manager_tests.py
(+96 files in other folders)
