[metadata]
name = byte
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Simple data model framework
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    byte
